Revert "Quick fix for removing scrollbar calculations"
This reverts commit 85988add200d5f0e791b42c3482677146c1be093.

--- a/src/styles/layout/foundation.less
+++ b/src/styles/layout/foundation.less
@@ -13,6 +13,7 @@
   left: 0px;
   height: 10000;
   width: 100%;
+  height: 10000px;
   overflow: hidden;
   .transition(e('left 0.3s ease, margin-left 0.3s ease'));
 }
